# StreamServer

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.e2e.yml
apps/desktop-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-client/src-tauri/capabilities/: default.json
apps/desktop-client/src-tauri/icons/: icon.icns
apps/desktop-client/src-tauri/src/: main.rs
clients/streamserver-desktop/native/: Cargo.toml
clients/streamserver-desktop/native/src/: api.rs  commands.rs  diagnostics.rs  discovery.rs  ffi.rs  lib.rs  media_player.rs  models.rs  secure_store.rs
config/: base.toml  development.toml
crates/media-agent/: Cargo.toml
crates/media-agent/src/: artifact_cleanup.rs  capability.rs  config.rs  control_plane.rs  ffmpeg_args.rs  ffmpeg_plan.rs  ffmpeg_probe.rs  heartbeat.rs  identity.rs  main.rs  management.rs  management_auth.rs  media_policy.rs  recording_control.rs  runtime.rs  runtime_adoption.rs  runtime_artifacts.rs  runtime_controls.rs  runtime_events.rs  runtime_executor.rs  runtime_io.rs  runtime_live_relay_cleanup.rs  runtime_live_relay_events.rs  runtime_live_relay_monitor.rs  runtime_live_relay_offline.rs  runtime_live_relay_recording.rs  runtime_live_relay_running.rs  runtime_live_relay_startup_timeout.rs  runtime_metadata.rs  runtime_monitors.rs  runtime_outputs.rs  runtime_persistence.rs  runtime_plan.rs  runtime_process.rs  runtime_process_exit.rs  runtime_process_monitors.rs  runtime_process_start.rs  runtime_recording.rs  runtime_recovery.rs  runtime_registry.rs  (+11 more)
crates/media-agent/src/runtime_manager/: actor.rs  backend.rs  command.rs  handle.rs  internal_event.rs  mod.rs  state.rs  tests.rs
crates/media-agent/src/tests/: artifact_cleanup.rs  capability.rs  heartbeat.rs  runtime.rs
crates/media-core/: Cargo.toml
crates/media-core/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/media-core/frontend/src/: App.vue  main.ts
crates/media-core/frontend/src/pages/: ApiDocsPage.vue  ArtifactsPage.vue  DebugPage.vue  LoginPage.vue  MediaUploadPage.vue  MulticastPage.vue  NodesPage.vue  OverviewPage.vue  RecordsPage.vue  SecurityPage.vue  StreamsPage.vue  TaskCreatePage.vue  TaskDetailPage.vue  TasksPage.vue
crates/media-core/frontend/src/router/: access-guard.ts  index.ts
crates/media-core/frontend/src/shared/: desktop-downloads.ts  desktop.ts  labels.ts  node-availability.ts  task-actions.ts  task-create.spec.ts  task-create.ts
crates/media-core/frontend/src/shared/api/: client.ts  resources.ts  types.ts
crates/media-core/frontend/src/shared/components/: AppShell.vue  DesktopClientDownload.vue  DesktopClientDownloadMenu.vue  MediaLink.vue  NodeOperationsSection.vue  OpenInVlcLink.vue  PageHeader.vue  StatusTag.vue
crates/media-core/frontend/src/shared/docs/: externalApiDocs.ts
crates/media-core/frontend/src/shared/utils/: clipboard.ts  format.ts
crates/media-core/frontend/src/stores/: session.ts  theme.ts
crates/media-core/frontend/src/styles/: theme.css
crates/media-core/frontend/tests/unit/pages/: security-page.spec.ts
crates/media-core/frontend/tests/unit/router/: access-guard.spec.ts
crates/media-core/frontend/tests/unit/shared/: api-client.spec.ts  desktop-downloads.spec.ts  desktop.spec.ts  node-availability.spec.ts  task-actions.spec.ts  task-create.spec.ts
crates/media-core/frontend/tests/unit/stores/: session.spec.ts
crates/media-core/src/: agent_identity.rs  agent_management.rs  auth.rs  callback.rs  config.rs  control_plane.rs  error.rs  main.rs  repository.rs  repository_agent_events.rs  repository_agent_identity.rs  repository_artifacts.rs  repository_attempt_state.rs  repository_auth.rs  repository_callback_outbox.rs  repository_core.rs  repository_dispatch.rs  repository_events.rs  repository_lifecycle.rs  repository_models.rs  repository_nodes.rs  repository_paths.rs  repository_schedules.rs  repository_streams.rs  repository_task_spec.rs  repository_tasks.rs  repository_zlm_hooks.rs  scheduler.rs  source_gateway.rs  telemetry.rs  test_database.rs  ui.rs  upload.rs
crates/media-core/src/tests/: auth.rs  control_plane.rs  main.rs  repository.rs
crates/media-core/ui/: app.js  index.html  styles.css
crates/media-gateway/: Cargo.toml
crates/media-gateway/src/: lib.rs  main.rs  prefetch.rs
crates/media-gateway/tests/: gateway.rs
docs/: 01-产品边界与术语.md  02-系统上下文与部署拓扑.md  03-领域模型与状态机.md  04-API规格.md  05-Agent与Core-RPC规格.md  06-ZLM适配与Hook规格.md  07-FFmpeg-ExecutionPlan规格.md  08-数据库设计与DDL.md  09-前端基础原型与页面规格.md  10-测试计划与验收标准.md  11-环境准备与依赖基线.md  12-研发流程与协作规范.md  13-里程碑与实施拆解.md  14-风险清单与预案.md  15-实测与故障注入记录.md  16-部署架构图.md  17-离线部署打包与安装.md  18-native-static-deployment.md  18-现场技术人员部署手册.md  README.md  concurrency-scheduling-audit-2026-03-31.md  streamserver-native-static-deployment-plan.docx  设计文档.md
migrations/: 0001_init.sql  0002_control_plane_fencing.sql  0002_node_identity_by_id_only.sql  0003_media_nodes_add_zlm_api_secret.sql  0003_media_server_identity.sql  0004_node_heartbeats.sql  0004_task_delete_indexes.sql  0005_local_auth_single_tenant.sql  0005_node_output_mount_prefixes.sql  0006_record_http_and_transcode_artifacts.sql  0006_task_reclaiming.sql  0007_gpu_node_telemetry.sql  0007_task_events_stream_runtime_lookup.sql  0008_node_stream_ports.sql  0008_task_callback_outbox.sql  0009_task_events_runtime_latest_index.sql  0010_node_agent_http_base_url.sql  0011_media_upload_assets.sql  0012_event_retention_indexes.sql  0013_runtime_slot_loads.sql  0014_agent_identity.sql
proto/: control_plane.proto
scripts/: build-deploy-package.sh  build-desktop-clients.mjs  build-desktop-installers.mjs  build-frontend-ui.mjs  build-frontend-with-desktop-clients.mjs  build-musl-binaries.sh  build-native-bundle.sh  build-offline-bundle.sh  build_musl_bin_by_docker.sh  collect-docker-native-migration-info.sh  export-host-update-package.sh  export-ui-zip.sh  migrate-docker-to-native-field.sh  package-offline-bundle.sh  smoke-codec-matrix.sh  smoke-media-gateway-timeslice.sh  sync-desktop-clients.mjs  (+4 more)
(+171 files in other folders)
