[package]
name = "media-agent"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
chrono.workspace = true
config.workspace = true
jsonwebtoken.workspace = true
hyper-util = { version = "0.1.20", features = ["server-auto", "tokio"] }
libc.workspace = true
media-domain = { path = "../media-domain" }
media-rpc = { path = "../media-rpc" }
reqwest.workspace = true
rcgen.workspace = true
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pki-types = { version = "1.13.1", features = ["std"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle = "2.6.1"
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
x509-parser.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
tokio = { workspace = true, features = ["test-util"] }
tower.workspace = true
