[package]
name = "media-core"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
chrono.workspace = true
config.workspace = true
cron.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
media-domain = { path = "../media-domain" }
media-rpc = { path = "../media-rpc" }
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
rcgen = "=0.13.2"
tempfile = "3.23.0"
tower.workspace = true
