[package]
name = "streamserver-desktop-client"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5", features = [] }
url = "2.5"
